# py-play

./: UV.md  pyproject.toml
.devcontainer/: Dockerfile  cas.pem  devcontainer.json
adk-google-search/: agent.py  main.py
adk/google_search/: agent.py
flask-demo/src/: main.py
