[project]
name = "py-play"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []  # Shared dependencies

[project.optional-dependencies]
adk-google-search = [
    "google-adk>=1.18.0",
    "google-genai>=1.47.0",
]
flask-demo = [
    "flask>=3.0.0",
]
all = [
    "google-adk>=1.18.0",
    "google-genai>=1.47.0",
    "flask>=3.0.0",
]